# WebApp

./: Cargo.toml
migrations/2024-10-18-122408_create_users/: up.sql
migrations/2024-10-18-153110_create_users/: down.sql  up.sql
migrations/2024-10-18-180033_create_users/: up.sql
migrations/2024-10-21-135400_schema/: down.sql  up.sql
migrations/2024-11-04-111552_schema/: up.sql
src/: main.rs  routing.rs
src/cfg/: mod.rs  user_cfg.rs
src/controller/: hello.rs  user_controller.rs
src/db/: connection.rs  schema.rs
src/helper/serializer/: mod.rs  system_time_serializer.rs
src/model/: menu.rs  mod.rs  page.rs  user.rs
src/services/: user_service.rs
