[package]
name = "WebApp"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0", features = ["postgres", "r2d2"] }
libsqlite3-sys = { version = "0.29", features = ["bundled"] }
dotenvy = "0.15"

[build-dependencies]
diesel = { version = "2.0", features = ["postgres"] }
